crates/rocklake-ffi/include/rocklake.h

/**
 * Returns the ABI version (major * 1000 + minor).
 *
 * Thread-safety: safe to call from any thread at any time.
 * Ownership: returns a plain integer — no memory to free.
 */
uint32_t rocklake_abi_version(void);
/* ─── Error Handling ───────────────────────────────────────────────────── */

/**
 * Error value returned as an output parameter from most FFI functions.
 *
 * Ownership: The `message` field is a heap-allocated C string owned by this
 * struct. Call `rocklake_error_free()` to release it — even when
 * `code == ROCKLAKE_OK`.
 *
 * Nullability: Functions that accept `rocklake_error_t *err` treat a NULL
 * `err` as "caller does not want error details"; the error is still
 * reflected in the return value.
 */
typedef struct {
    /** ROCKLAKE_OK (0) on success; a non-zero ROCKLAKE_ERR_* code on failure. */
    int32_t code;
    /** Human-readable message. NULL when code == ROCKLAKE_OK.
     *  Caller-owned; release with rocklake_error_free(). */
    char *message;
} rocklake_error_t;
/**
 * Frees the message field and zeroes the struct.
 * Must be called on every rocklake_error_t output, including on success.
 * Nullability: `err` may be NULL; safe no-op.
 */
void rocklake_error_free(rocklake_error_t *err);
/* ─── Opaque Catalog Handle ────────────────────────────────────────────── */

/**
 * Opaque handle representing an open RockLake catalog.
 *
 * Ownership: Created by `rocklake_open()`; must be closed with
 *   `rocklake_close_ex()` or `rocklake_close()`, then freed with
 *   `rocklake_destroy()` exactly once.
 * Thread-safety: A single handle must NOT be used from multiple threads
 *   simultaneously without external locking.
 * Nullability: Functions that accept this type treat NULL as an invalid
 *   handle and return ROCKLAKE_ERR_NOT_INITIALIZED.
 */
typedef struct RockLakeCatalog rocklake_catalog_t;
/* ─── Result Types ─────────────────────────────────────────────────────── */

/**
 * Snapshot metadata returned by value — no heap allocation, no free needed.
 */
typedef struct {
    /** Monotonic snapshot identifier. 0 when no snapshots exist. */
    uint64_t snapshot_id;
    /** Catalog schema version at this snapshot. */
    uint64_t schema_version;
} rocklake_snapshot_t;
/**
 * Caller-owned list of data files. Free with `rocklake_file_list_free()`.
 */
typedef struct {
    rocklake_data_file_t *files;
    uint64_t count;
} rocklake_file_list_t;
/**
 * Caller-owned list of schemas. Free with `rocklake_schema_list_free()`.
 */
typedef struct {
    rocklake_schema_entry_t *schemas;
    uint64_t count;
} rocklake_schema_list_t;
/**
 * Caller-owned list of tables. Free with `rocklake_table_list_free()`.
 */
typedef struct {
    rocklake_table_entry_t *tables;
    uint64_t count;
} rocklake_table_list_t;
/**
 * Caller-owned list of columns. Free with `rocklake_column_list_free()`.
 */
typedef struct {
    rocklake_column_entry_t *columns;
    uint64_t count;
} rocklake_column_list_t;
/* ─── Catalog Operations ───────────────────────────────────────────────── */

/**
 * Open a catalog at the given URI (local filesystem path).
 *
 * Thread-safety: safe to call concurrently; each call returns an independent
 *   handle backed by its own Tokio runtime.
 * Nullability: `uri` must be non-NULL. `err` may be NULL.
 * Ownership: on success returns a heap-allocated handle the caller must
 *   close with `rocklake_close()`. Returns NULL on failure.
 * Free: `rocklake_close()` then `rocklake_destroy()` for the handle;
 *   `rocklake_error_free(err)`.
 */
rocklake_catalog_t *rocklake_open(const char *uri, rocklake_error_t *err);
/**
 * Open a catalog in **read-only** mode: no writer epoch is acquired.
 *
 * Identical to `rocklake_open()` except that the CAS writer-epoch key is not
 * incremented.  Many simultaneous `rocklake_open_readonly()` calls against the
 * same catalog prefix produce zero write conflicts — use this function for
 * stateless reader replicas, analytics sidecars, and horizontal fan-out pods.
 *
 * Thread-safety: safe to call concurrently; each call returns an independent
 *   handle backed by its own Tokio runtime.
 * Nullability: `uri` must be non-NULL. `err` may be NULL.
 * Ownership: on success returns a heap-allocated handle the caller must
 *   close with `rocklake_close()`. Returns NULL on failure.
 * Free: `rocklake_close()` then `rocklake_destroy()` for the handle;
 *   `rocklake_error_free(err)`.
 */
rocklake_catalog_t *rocklake_open_readonly(const char *uri, rocklake_error_t *err);
/**
 * Close a catalog handle, discarding a possible close error for compatibility.
 *
 * Thread-safety: must not be called while any other thread uses this handle.
 * Nullability: `catalog` may be NULL or already-closed; safe no-op.
 * Ownership: releases the catalog resources but leaves a tombstone until
 *   `rocklake_destroy()` is called.
 */
void rocklake_close(rocklake_catalog_t *catalog);
/**
 * Get the current (latest) snapshot.
 *
 * Nullability: `catalog` must be non-NULL and open. `err` may be NULL.
 * Ownership: returns by value (no heap allocation). Free `err` with
 *   `rocklake_error_free()`.
 */
rocklake_snapshot_t rocklake_get_current_snapshot(
    rocklake_catalog_t *catalog, rocklake_error_t *err);
/**
 * List schemas at an exact snapshot ID.
 *
 * Nullability: `catalog` must be non-NULL and open. `err` may be NULL.
 * Ownership: returns a heap-allocated `rocklake_schema_list_t`.
 * Free: `rocklake_schema_list_free()`, `rocklake_error_free(err)`.
 */
rocklake_schema_list_t rocklake_list_schemas(
    rocklake_catalog_t *catalog, uint64_t snapshot_id, rocklake_error_t *err);
/**
 * List tables in a schema at an exact snapshot ID.
 *
 * Nullability: `catalog` must be non-NULL and open. `err` may be NULL.
 * Ownership: returns a heap-allocated `rocklake_table_list_t`.
 * Free: `rocklake_table_list_free()`, `rocklake_error_free(err)`.
 */
rocklake_table_list_t rocklake_list_tables(
    rocklake_catalog_t *catalog, uint64_t schema_id, uint64_t snapshot_id,
    rocklake_error_t *err);
/**
 * Describe a table's columns at an exact snapshot ID.
 *
 * Nullability: `catalog` must be non-NULL and open. `err` may be NULL.
 * Ownership: returns a heap-allocated `rocklake_column_list_t`.
 * Free: `rocklake_column_list_free()`, `rocklake_error_free(err)`.
 */
rocklake_column_list_t rocklake_describe_table(
    rocklake_catalog_t *catalog, uint64_t table_id, uint64_t snapshot_id,
    rocklake_error_t *err);
/**
 * List data files for a table at an exact snapshot ID.
 *
 * Nullability: `catalog` must be non-NULL and open. `err` may be NULL.
 * Ownership: returns a heap-allocated `rocklake_file_list_t`.
 * Free: `rocklake_file_list_free()`, `rocklake_error_free(err)`.
 */
rocklake_file_list_t rocklake_list_data_files(
    rocklake_catalog_t *catalog, uint64_t table_id, uint64_t snapshot_id,
    rocklake_error_t *err);
/**
 * Free a column list returned by `rocklake_describe_table()`.
 * Nullability: `list` may be NULL.
 */
void rocklake_column_list_free(rocklake_column_list_t *list);
/**
 * Free a file list returned by `rocklake_list_data_files()`.
 * Nullability: `list` may be NULL.
 */
void rocklake_file_list_free(rocklake_file_list_t *list);